--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>tasty-explore</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Restaurant Special gout" />
+    <meta name="author" content="special" />
 
     <!-- Désactiver l'aperçu des liens -->
     <meta name="robots" content="noindex,nofollow" />
