--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tasty-explore</title>
+    <title>lespecial</title>
     <meta name="description" content="Restaurant Special gout" />
     <meta name="author" content="special" />
 
